<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/eyecan_logo_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fullName_field"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_rounded_form"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
       android:hint="Full Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <EditText
        android:id="@+id/ed_email"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/background_rounded_form"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
        android:hint="Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName_field" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/spinnerOccupation"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_rounded_form"
        android:gravity="start|center_vertical"
        android:hint="Select Occupation"
        android:padding="10dp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"
        app:spinner_arrow_show="false"
        app:spinner_item_array="@array/occupation_list"
        app:spinner_item_height="40dp" />


    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_rounded_form"
        android:hint="Age"
        android:inputType="number"
        android:padding="10dp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOccupation"
        app:layout_constraintVertical_bias="0.0" />
    <EditText
        android:id="@+id/mobile_field"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="phone"
        android:background="@drawable/background_rounded_form"
        android:hint="Mobile Number"
        android:padding="10dp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

    <EditText
        android:id="@+id/addressField"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_rounded_form"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
       android:hint="Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_field" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_rounded_form"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
        android:hint="Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressField" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_rounded_form"
        android:backgroundTint="@color/new_orange"
        android:text="@string/action_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />


</androidx.constraintlayout.widget.ConstraintLayout>