<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="body" type="id">body</item>
</resources>